--- a/actividadSemana5_v2/style.css
+++ b/actividadSemana5_v2/style.css
@@ -95,140 +95,88 @@ h3{
 footer{
     width: 100%;
     background: #202020;
-    color: white;   
-        
-}
-
-.colum1{
-    display: inline-block;
-    padding: 0;
-}
-
-.colum1 h1{
-    font-size: 20px;
-    margin: 0;
-}
-
-.colum1 p{
-    font-size: 13px;
-    color: #C7C7C7;
-    text-align: justify;
-    padding: 0;
-    margin: 0;
-}
-
-.colum2{
-    margin: 0;
-    padding: 0;
-    display: flex;
-}
-
-.colum2 h1{
-    font-size: 20px;
-    margin: 0;
-    padding: 0;
-}
-
-.row{
-    margin-top: 4px;
-    display: flex;
-}
-
-.row img{
-    width: 20px;
-    height: 20px;
-}
-
-.row label{
-    margin-top: 5px;
-    margin-left: 12px;
-    color: #C7C7C7;
-}
-
-.colum3{
-    display: flex;
-    margin-top: 1rem;
-    padding: 0px;
-}
-
-.colum3 h1{
-    font-size: 20px;
-    margin-right: 10px;
-}
-
-.row2{
-    margin-top: 0px;
-    display: flex;
-    padding: 0;
-    justify-content: flex-start;
-}
-
-.row2 img{
-    width: 30px;
-    height: 30px;
-}
-
-.row2 label{    
-    margin-top: 0px;
-    margin-left: 0px;
-}
-
-.container-footer{
-    width: 100%;  
-    background: #101010;
-}
-
-.footer{
-    max-width: 1200px;
-    margin: auto;
-    display: flex;
-    justify-content: space-between;  
-    padding: 0px;
-}
-
-.copyright{
-    color: #C7C7C7;
-    font-size: 13px;
-    margin-top: 19px;
-    
-}
-
-.copyright a{
-    text-decoration: none;
     color: white;
-    font-weight: bold;
-    font-size: 13px;
+    display: grid;
+    grid-template-areas: "personal redes adicional";
 }
 
-.information a{
-    text-decoration: none;
-    color: #C7C7C7;
-    font-size: 18px;
+.datos ul{
+    flex-direction: column;
+    align-items: center;
+    list-style: none;
 }
 
-.articulo1{
-    background-color: cadetblue;
+.Adicionales{
+    text-align: center;
+}
+
+.articulo{
+    background-color:silver;
+    margin: 0;
+
+}
+
+.header-top{
+    display: grid;
+    grid-template-areas: 
+        "logo nombre"
+        "busqueda busqueda";
+}
+
+.header-top ul{
+    padding-left: 0;
+    list-style: none;
+}
+
+.logoHeader{
+    grid-area: logo;
+}
+
+.logofuego{
+    width: 27px
+}
+
+.tituloHeader{
+    grid-area: nombre;
+}
+
+.navegacionHeader{
+    grid-area: busqueda;
+}
+
+.navegacionHeader input{
+    width: 50%;
+}
+
+.contenedorfig{
+    display: flex;
+    flex-direction: column;
+    align-content: center;
+    align-items: center;
+    padding-left: 0%;
+}
+
+.cont{
+    width: auto;
+    display: flex;
+    flex-direction: column;
+}
+
+.cont a{
+    color: wheat;
+    font-size: 200%;
     width: 100%;
-    float: right;
-    height: 100vh;
-    color: white;
-    max-width: 2000px;
+    display: flex;
+    justify-content: center;
 }
 
-.articulo1 .text1{
-    font-size: 30px;
+.cont img{
+    width: 50%;
+    align-items: center;
 }
 
-.articulo1 .text1 .text1{
-    text-align: justify;
-    margin-right: 0;
-}
-
-#inputsubmit{
-    width: 101px;
-    height: 25px;
-    margin-top: 20px;
-    font-size: 19px;
+.cont figcaption{
+    text-align: center;
 }
 
 .articulo2{
@@ -240,57 +188,23 @@ footer{
     max-width: 2000px;
 }
 
-.contenedorfig{
-    display: flex;
-    margin-top: 15vh;
-    margin-left: 148px;
-    position: static;
-    justify-content: space-between;
-    flex-wrap: nowrap;
-    
-}
-
-.noticia1{
-    width: 120%;
-    height: auto;
-    margin-top: 30%;
-}
-
-.noticia2{
-    width: 120%;
-    height: 58%;
-    margin-top: 30%;
-}
-
-.noticia3{
-    width: 100%;
-    height: auto;
-}
-
 .articulo3{
-    background-color:crimson;
+    background-color: crimson;
     width: 100%;
-    float: right;
     height: 100vh;
     color: white;
-    max-width: 2000px;
 }
 
 .contenedorvideo{
-    margin-left: 400px;
-    width: 100vh;
-    height: auto;
+    width: 100%;
     display: block;
-    margin-top: 15vh;
+    text-align: center;
+    padding-top: 50%;
 }
 
-
-/*                                    
-----------------------------------------
-
-*/
-
-
+.video{
+    width: 80%;
+}
 
 @media (min-width:700px){
     header {
@@ -339,6 +253,8 @@ footer{
         box-sizing: border-box;
         
     }
+
+    
 
     nav ul{
         width: 100%;
@@ -550,24 +466,29 @@ footer{
     
     .contenedorfig{
         display: flex;
-        margin-top: 15vh;
-        margin-left: 148px;
-        position: static;
-        justify-content: space-between;
-        flex-wrap: nowrap;
-        
+        margin-top: 0;
     }
     
+    .cont img{
+        width: 50%;
+        align-items: center;
+    }
+
+    .cont a{
+        color: wheat;
+        display: flex;
+        justify-content: center;
+    }
+
     .noticia1{
         width: 120%;
         height: auto;
-        margin-top: 30%;
     }
     
     .noticia2{
         width: 120%;
         height: 58%;
-        margin-top: 30%;
+
     }
     
     .noticia3{
@@ -576,19 +497,55 @@ footer{
     }
     
     .articulo3{
-        background-color:crimson;
+        background-color: crimson;
         width: 100%;
         float: right;
         height: 100vh;
         color: white;
         max-width: 2000px;
+        display: flex;
+        align-items: center;
     }
     
     .contenedorvideo{
-        margin-left: 400px;
-        width: 100vh;
-        height: auto;
-        display: block;
-        margin-top: 15vh;
+        margin-left: 20%;
+        width: 100vw;
+        padding: 10%;
+    }
+
+    .video{
+        width: 80%;
+        height: 50vh;
+    }
+
+    .header-top{
+        display: grid;
+        grid-template-areas: 
+            "logo nombre busqueda";
+    }
+    
+    .header-top ul{
+        padding-left: 0;
+        list-style: none;
+    }
+    
+    .logoHeader{
+        grid-area: logo;
+    }
+    
+    .logofuego{
+        width: 27px
+    }
+    
+    .tituloHeader{
+        grid-area: nombre;
+    }
+    
+    .navegacionHeader{
+        grid-area: busqueda;
+    }
+    
+    .navegacionHeader input{
+        width: 50%;
     }
 }
